# kora-synth

./: user-manual.md
k0raPlus_vst3/: Cargo.toml  README.md  bundler.toml  k0ra-user-manual.md
k0raPlus_vst3/src/: lib.rs
k0ra_vst3/: Cargo.toml  bundler.toml
k0ra_vst3/src/: lib.rs
kora_midi_real_time/: Cargo.toml
kora_midi_real_time/src/: main.rs
kora_vst2/: Cargo.toml
kora_vst3/: Cargo.toml  README.md
v0.1.0/: cargo.toml
v0.1.0/src/: main.rs
