[package]
name = "k0raPlus_vst3"
version = "0.6.0"
edition = "2021"
authors = ["blair"]
license = "Hybrid MIT & CC0"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rand = "0.8"

[profile.release]
lto = "thin"
strip = "symbols"